This fixes 'Preview images are too wide'. This closes #14

--- a/app/style.css
+++ b/app/style.css
@@ -515,7 +515,7 @@ h4 {
   border-bottom: solid 2px #969696;
 }
 
-.CodeMirror img{
+.CodeMirror img, .editor-preview-side img{
     max-width: 100%;
     height: initial;
 }
